--- a/.dockerignore
+++ b/.dockerignore
@@ -5,6 +5,7 @@
 docs/
 infrastructure/
 scripts/
+!scripts/download-artifacts.sh
 
 # Top-level files unrealted to the build.
 CODEOWNERS
@@ -22,11 +23,9 @@ solidity-v1/
 !solidity-v1/contracts
 !solidity-v1/package.json
 !solidity-v1/package-lock.json
-solidity
-!solidity/random-beacon/contracts
-!solidity/random-beacon/package.json
-!solidity/random-beacon/yarn.lock
+solidity/
 
 # Go stuff.
+**/gen/_contracts
 **/gen/*/**/*.go
-!pkg/chain/gen/cmd/cmd*.go
+!**/gen/cmd/cmd.go
