--- a/solidity/random-beacon/package.json
+++ b/solidity/random-beacon/package.json
@@ -34,7 +34,7 @@
     "@keep-network/sortition-pools": "^2.0.0-pre.9",
     "@openzeppelin/contracts": "^4.6.0",
     "@thesis/solidity-contracts": "github:thesis/solidity-contracts#4985bcf",
-    "@threshold-network/solidity-contracts": ">1.2.0-dev <1.2.0-ropsten"
+    "@threshold-network/solidity-contracts": "development"
   },
   "devDependencies": {
     "@defi-wonderland/smock": "^2.0.7",
