--- a/solidity/ecdsa/package.json
+++ b/solidity/ecdsa/package.json
@@ -28,11 +28,12 @@
     "build": "hardhat compile",
     "test": "TEST_USE_STUBS=true hardhat test",
     "deploy": "hardhat deploy --export export.json",
-    "prepack": "tsc -p tsconfig.export.json && hardhat export-artifacts --including-no-public-functions export/artifacts"
+    "prepack": "tsc -p tsconfig.export.json && hardhat export-artifacts --including-no-public-functions export/artifacts",
+    "prepublishOnly": "hardhat prepare-artifacts --network $npm_config_network"
   },
   "devDependencies": {
     "@defi-wonderland/smock": "^2.0.7",
-    "@keep-network/hardhat-helpers": "^0.6.0-pre.5",
+    "@keep-network/hardhat-helpers": "^0.6.0-pre.8",
     "@keep-network/hardhat-local-networks-config": "^0.1.0-pre.4",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
