--- a/solidity/random-beacon/package.json
+++ b/solidity/random-beacon/package.json
@@ -28,7 +28,8 @@
     "lint:fix:sol": "solhint 'contracts/**/*.sol' --fix && prettier --write '**/*.sol'",
     "lint:config": "prettier --check '**/*.@(json|yaml)'",
     "lint:config:fix": "prettier --write '**/*.@(json|yaml)'",
-    "prepack": "tsc -p tsconfig.export.json && hardhat export-artifacts --including-no-public-functions export/artifacts"
+    "prepack": "tsc -p tsconfig.export.json && hardhat export-artifacts --including-no-public-functions export/artifacts",
+    "prepublishOnly": "hardhat prepare-artifacts --network $npm_config_network"
   },
   "dependencies": {
     "@keep-network/sortition-pools": "^2.0.0-pre.9",
@@ -38,7 +39,7 @@
   },
   "devDependencies": {
     "@defi-wonderland/smock": "^2.0.7",
-    "@keep-network/hardhat-helpers": "^0.6.0-pre.7",
+    "@keep-network/hardhat-helpers": "^0.6.0-pre.8",
     "@keep-network/hardhat-local-networks-config": "^0.1.0-pre.0",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
