Add deployment test job
The job should be run to test the deployment locally

--- a/.github/workflows/contracts-ecdsa.yml
+++ b/.github/workflows/contracts-ecdsa.yml
@@ -159,7 +159,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Deploy contracts
-        run: yarn deploy
+        run: yarn deploy:test
 
   contracts-deployment-testnet:
     needs: [contracts-detect-changes, contracts-build-and-test]
