--- a/.github/workflows/contracts-v1.yml
+++ b/.github/workflows/contracts-v1.yml
@@ -2,7 +2,7 @@ name: Solidity v1
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: "0 0 * * *"
   push:
     branches:
       - main
@@ -13,16 +13,16 @@ on:
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Environment for workflow execution'
+        description: "Environment for workflow execution"
         required: false
-        default: 'dev'
+        default: "dev"
       upstream_builds:
-        description: 'Upstream builds'
+        description: "Upstream builds"
         required: false
       upstream_ref:
-        description: 'Git reference to checkout (e.g. branch name)'
+        description: "Git reference to checkout (e.g. branch name)"
         required: false
-        default: 'main'
+        default: "main"
 
 jobs:
   contracts-detect-changes:
@@ -55,7 +55,7 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: "14.x"
+          node-version: "16"
           cache: "npm"
           cache-dependency-path: solidity-v1/package-lock.json
 
@@ -88,7 +88,7 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: "14.x"
+          node-version: "16"
           cache: "npm"
           cache-dependency-path: solidity-v1/package-lock.json
 
@@ -117,14 +117,14 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: "14.x"
+          node-version: "16"
           cache: "npm"
           cache-dependency-path: solidity-v1/package-lock.json
           registry-url: "https://registry.npmjs.org"
 
       - name: Install dependencies
         run: npm ci
-      
+
       - name: Migrate contracts on Ethereum
         if: github.event.inputs.environment != 'alfajores'
         env:
@@ -231,7 +231,7 @@ jobs:
           push: true
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
-      
+
       - name: Notify CI about completion of the workflow
         uses: keep-network/ci/actions/notify-workflow-completed@v1
         env:
@@ -277,7 +277,7 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: "14.x"
+          node-version: "16"
           cache: "npm"
           cache-dependency-path: solidity-v1/package-lock.json
 
