Switch `golint` CI job to `gofmt`
Current `golint` CI job raised a lot of
errors in packages that will be removed
soon. In the same time `golint` does not allow
for ignoring those errors and became deprecated.
We decided to remove it in favor of `gofmt`
to maintain formatting rules. We will add
a new linting tool soon.

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -159,7 +159,7 @@ jobs:
             -exclude-dir=pkg/chain/gen
             ./...
 
-  client-lint:
+  client-format:
     needs: client-detect-changes
     if: |
       github.event_name == 'push'
@@ -168,5 +168,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Lint Go
-        uses: keep-network/golint-action@v1.0.2
+      - name: Go format
+        uses: Jerome1337/gofmt-action@v1.0.4
