--- a/src/staking-rewards-calculation/package.json
+++ b/src/staking-rewards-calculation/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@urql/core": "^2.5.0",
     "bignumber.js": "^9.0.2",
+    "ethers": "^5.6.9",
     "graphql": "^16.5.0",
     "isomorphic-unfetch": "^3.1.0"
   }
