Upgrade @threshold-network/solidity-contracts in beacon
When publishing NPM packages we upgrade the versions of dependencies. We
were missing a step of upgrading @threshold-network/solidity-contracts
in the random beacon project. Adding it here.

--- a/.github/workflows/npm-random-beacon.yml
+++ b/.github/workflows/npm-random-beacon.yml
@@ -30,7 +30,10 @@ jobs:
           cache-dependency-path: solidity/random-beacon/yarn.lock
 
       - name: Resolve latest contracts
-        run: yarn upgrade @keep-network/sortition-pools
+        run: |
+          yarn upgrade \
+            @keep-network/sortition-pools \
+            @threshold-network/solidity-contracts
 
       # Deploy contracts to a local network to generate deployment artifacts that
       # are required by dashboard and client compilation.
