Integrated sortition pool monitoring loop with beacon node
The client monitors the sortition pool status now. There is a complication with
ethereum chain - the v2 implementation does not support v1 ethereum chain
functions and the v1 implementation does not support v2 functions. For now, both
instances are passed. In the future, we will decide if we want to port features
to v2 gradually or cut the entire v1 chain in one move altogether.

Note that from now on, `RandomBeacon` contract address must be specified in the
config file.

Old contract addresses still need to be there but the values do not matter.

--- a/configs/config.toml.SAMPLE
+++ b/configs/config.toml.SAMPLE
@@ -52,13 +52,11 @@
 	KeyFile            = "/Users/someuser/ethereum/data/keystore/UTC--2018-03-11T01-37-33.202765887Z--AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA8AAAAAAAAA"
 
 [ethereum.ContractAddresses]
-	# Hex-encoded address of KeepRandomBeaconOperator contract
-	KeepRandomBeaconOperator = "0xBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
-	# Hex-encoded address of TokenStaking contract
+	RandomBeacon = "0xBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
+
+    # Legacy v1 contracts, do not have to be set. Soon to be removed.
+	KeepRandomBeaconOperator = "0xCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC"
 	TokenStaking = "0xCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC"
-	# Hex-encoded address of KeepRandomBeaconService contract. Only needed
-	# in cases where the client's utility functions will be used (e.g., the
-	# relay subcommand).
 	KeepRandomBeaconService = "0xCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC"
 
 [LibP2P]
