--- a/solidity/random-beacon/package.json
+++ b/solidity/random-beacon/package.json
@@ -42,6 +42,7 @@
     "@keep-network/hardhat-helpers": "^0.6.0-pre.8",
     "@keep-network/hardhat-local-networks-config": "^0.1.0-pre.0",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/hardhat-upgrades": "^1.17.0",
     "@tenderly/hardhat-tenderly": "^1.0.12",
