Clean always before running generation
We cleanup always before running bindings generation as current
configuration of make doesn't work well with source artifacts that are
extracted from tar archive.

--- a/pkg/chain/ethereum/common/gen/Makefile
+++ b/pkg/chain/ethereum/common/gen/Makefile
@@ -15,11 +15,10 @@ contract_files = $(addprefix contract/,$(addsuffix .go,${required_contracts}))
 # Files containing addresses extracted from the artifacts.
 address_files = $(addprefix _address/,${required_contracts})
 
-all: ${address_files} gen_contract_go
+all: clean ${address_files} gen_contract_go
 
 clean:
 	rm -rf _address/*
-	rm -rf ${contracts_dir}/*
 	rm -rf abi/*
 	rm -rf contract/*
 	mkdir tmp && mv cmd/cmd*.go tmp
