Add artifacts json as a target that is required for binding
Added a json artifact reference as a prerequisite for binding
generation.

--- a/pkg/chain/ethereum/common/gen/Makefile
+++ b/pkg/chain/ethereum/common/gen/Makefile
@@ -52,7 +52,7 @@ else
 	jq -jr .address ${artifacts_dir}/$*.json > _address/$*
 endif
 
-contract/%.go cmd/%.go: abi/%.abi abi/%.go _address/%
+contract/%.go cmd/%.go: abi/%.abi abi/%.go _address/% ${artifacts_dir}/%.json
 	go run github.com/keep-network/keep-common/tools/generators/ethlike $< contract/$*.go cmd/$*.go
 
 # Don't remove intermediate files that got generated.
