--- a/src/staking-rewards-calculation/package.json
+++ b/src/staking-rewards-calculation/package.json
@@ -14,6 +14,8 @@
     "bignumber.js": "^9.0.2",
     "ethers": "^5.6.9",
     "graphql": "^16.5.0",
-    "isomorphic-unfetch": "^3.1.0"
+    "isomorphic-unfetch": "^3.1.0",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.32"
   }
 }
