--- a/.github/workflows/contracts-ecdsa.yml
+++ b/.github/workflows/contracts-ecdsa.yml
@@ -165,7 +165,7 @@ jobs:
     needs: [contracts-detect-changes, contracts-build-and-test]
     if: |
       github.event_name == 'workflow_dispatch'
-        && github.event.inputs.environment == 'ropsten'
+        && github.event.inputs.environment == 'goerli'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -284,7 +284,7 @@ jobs:
       - name: Verify contracts on Etherscan
         env:
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
-          CHAIN_API_URL: ${{ secrets.ROPSTEN_ETH_HOSTNAME_HTTP }}
+          CHAIN_API_URL: ${{ secrets.GOERLI_ETH_HOSTNAME_HTTP }}
         run: |
           yarn run hardhat --network ${{ github.event.inputs.environment }} \
             etherscan-verify --license GPL-3.0 --force-license
