Set CONTRACTS_NPM_PACKAGE_TAG in docker build CI
We need to set CONTRACTS_NPM_PACKAGE_TAG with a tag matching the
environment name, as the client code generator pulls contracts from NPM
that were previously published and tagged with environment.

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -113,6 +113,8 @@ jobs:
         env:
           IMAGE_NAME: 'keep-client'
         with:
+          build-args: |
+            CONTRACTS_NPM_PACKAGE_TAG=${{ github.event.inputs.environment }}
           tags: ${{ env.GCR_REGISTRY_URL }}/${{ env.GOOGLE_PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.environment }}
           labels: |
             revision=${{ github.sha }}
