Exclude gen dirs for gosec
The directories have missing `_address/*` files so gosec fails. We could
put the files into repo or generate them, but also just exclude the
directories.

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -155,7 +155,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: securego/gosec@master
         with:
-          args: ./...
+          args: |
+            -exclude-dir=pkg/chain/ethereum/beacon/gen
+            -exclude-dir=pkg/chain/ethereum/ecdsa/gen
+            -exclude-dir=pkg/chain/ethereum/threshold/gen
+            -exclude-dir=pkg/chain/ethereum/tbtc/gen
+            ./...
 
   client-format:
     needs: client-detect-changes
