--- a/infrastructure/kube/keep-test/geth-node/eth-goerli-node.yaml
+++ b/infrastructure/kube/keep-test/geth-node/eth-goerli-node.yaml
@@ -1,8 +1,25 @@
 ---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: geth-goerli
+provisioner: kubernetes.io/gce-pd
+parameters:
+  type: pd-ssd
+  replication-type: none
+reclaimPolicy: Retain
+allowVolumeExpansion: true
+mountOptions:
+  - debug
+volumeBindingMode: Immediate
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: geth-goerli
+  labels:
+    app: geth
+    network: goerli
 spec:
   replicas: 1
   serviceName: geth-goerli
@@ -18,12 +35,12 @@ spec:
   selector:
     matchLabels:
       app: geth
-      type: goerli
+      network: goerli
   template:
     metadata:
       labels:
         app: geth
-        type: goerli
+        network: goerli
     spec:
       containers:
         - name: geth-goerli
@@ -36,3 +53,29 @@ spec:
             - name: geth-goerli
               mountPath: /root/.ethereum
           args: ["--http", "--http.addr=0.0.0.0", "--ws", "-ws.addr=0.0.0.0", "--goerli", "--syncmode=snap"]
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: geth-goerli
+  labels:
+    app: geth
+    network: goerli
+spec:
+  selector:
+    app: geth
+    network: goerli
+  ports:
+    - port: 8545
+      targetPort: 8545
+      name: tcp-8545
+    - port: 8546
+      targetPort: 8546
+      name: tcp-8546
+    - port: 30303
+      targetPort: 30303
+      name: tcp-30303
+    - port: 30303
+      targetPort: 30303
+      name: udp-30303
+      protocol: UDP
