--- a/test/config.yaml
+++ b/test/config.yaml
@@ -20,8 +20,8 @@ Storage:
   DataDir: /my/secure/location
 Metrics:
   Port: 3498
-  NetworkMetricsTick: 43
-  EthereumMetricsTick: 27
+  NetworkMetricsTick: "43s"
+  EthereumMetricsTick: "1m27s"
 Diagnostics:
   Port: 9723
 Developer:
