Use USE_EXTERNAL_DEPLOY flag when running yarn test

--- a/solidity/ecdsa/package.json
+++ b/solidity/ecdsa/package.json
@@ -26,7 +26,7 @@
     "lint:config:fix": "prettier --write '**/*.@(json|yaml)'",
     "clean": "hardhat clean",
     "build": "hardhat compile",
-    "test": "TEST_USE_STUBS_ECDSA=true hardhat test",
+    "test": "USE_EXTERNAL_DEPLOY=true TEST_USE_STUBS_ECDSA=true hardhat test",
     "deploy": "hardhat deploy --export export.json",
     "deploy:test": "TEST_USE_STUBS_ECDSA=true npm run deploy",
     "prepack": "tsc -p tsconfig.export.json && hardhat export-artifacts --including-no-public-functions export/artifacts",
