Use yarn deploy:test for beacon in dry-run job

--- a/.github/workflows/contracts-random-beacon.yml
+++ b/.github/workflows/contracts-random-beacon.yml
@@ -157,7 +157,7 @@ jobs:
         run: yarn install --network-concurrency 1 --frozen-lockfile
 
       - name: Deploy contracts
-        run: yarn deploy
+        run: yarn deploy:test
 
   contracts-deployment-testnet:
     needs: [contracts-detect-changes, contracts-build-and-test]
