--- a/solidity/ecdsa/.gitignore
+++ b/solidity/ecdsa/.gitignore
@@ -1,11 +1,15 @@
 # Hardhat
 build/
 cache/
-deployments/hardhat/
 export/
 external/npm
 hardhat-dependency-compiler/
 export.json
+
+# Contract artifacts
+artifacts/
+deployments/
+!deployments/mainnet
 
 # OpenZeppelin
 .openzeppelin/unknown-*.json
