Add logging for make
Instead of reporting the command output on generation which prints a lot
of noise, we output error messages.

--- a/pkg/chain/ethereum/common/gen/Makefile
+++ b/pkg/chain/ethereum/common/gen/Makefile
@@ -5,6 +5,10 @@ endif
 root_dir := $(realpath ../../../../..)
 artifacts_dir := ${root_dir}/tmp/contracts/${environment}/${npm_package_name}/artifacts
 
+$(info Package              ${npm_package_name})
+$(info Environment          ${environment})
+$(info Artifacts directory  ${artifacts_dir})
+
 # Go bindings generated for the solidity contracts.
 contract_files = $(addprefix contract/,$(addsuffix .go,${required_contracts}))
 
@@ -14,12 +18,13 @@ address_files = $(addprefix _address/,${required_contracts})
 all: clean check_artifacts ${address_files} gen_contract_go
 
 clean:
-	rm -rf _address/*
-	rm -rf abi/*
-	rm -rf contract/*
-	mkdir tmp && mv cmd/cmd*.go tmp
-	rm -rf cmd/*
-	mv tmp/* cmd && rm -rf tmp
+	$(info Cleaning up for ${npm_package_name})
+	@rm -rf _address/*
+	@rm -rf abi/*
+	@rm -rf contract/*
+	@mkdir tmp && mv cmd/cmd*.go tmp
+	@rm -rf cmd/*
+	@mv tmp/* cmd && rm -rf tmp
 
 # Check if artifacts directory exists. If the directory doesn't exists it is
 # likely a problem inside a fetched contracts package.
@@ -29,24 +34,28 @@ check_artifacts:
 gen_contract_go: ${contract_files}
 
 abi/%.abi: ${artifacts_dir}/%.json
-	jq .abi $< > abi/$*.abi
+	$(info $* - generating ABI)
+	@jq .abi $< > abi/$*.abi
 
 abi/%.go: abi/%.abi
-	go run github.com/ethereum/go-ethereum/cmd/abigen --abi $< --pkg abi --type $* --out $@
+	$(info $* - generating Ethereum bindings)
+	@go run github.com/ethereum/go-ethereum/cmd/abigen --abi $< --pkg abi --type $* --out $@
 
 # Extract address of a contract from an artifact. Artfifacts that are published
 # with `development` tag are not accessible on developers' environments, so we
 # replace them with zeros.
 _address/%: ${artifacts_dir}/%.json
 ifeq ($(environment), development)
-	@echo "Skipping address extraction for development package"
+	$(info $* - skipping address extraction for development package)
 	@echo "0x0000000000000000000000000000000000000000" > _address/$*
 else
-	jq -jr .address ${artifacts_dir}/$*.json > _address/$*
+	$(info $* - extracting address)
+	@jq -jr .address ${artifacts_dir}/$*.json > _address/$*
 endif
 
 contract/%.go cmd/%.go: abi/%.abi abi/%.go _address/% ${artifacts_dir}/%.json
-	go run github.com/keep-network/keep-common/tools/generators/ethereum $< contract/$*.go cmd/$*.go
+	$(info $* - generating Keep bindings)
+	@go run github.com/keep-network/keep-common/tools/generators/ethereum $< contract/$*.go cmd/$*.go
 
 # Don't remove intermediate files that got generated.
 .PRECIOUS: abi/%.abi abi/%.go _address/%
