--- a/.gitignore
+++ b/.gitignore
@@ -55,5 +55,7 @@ export.json
 typechain/
 
 # Go bindings generator
-pkg/chain/*/*/gen/_contracts
 pkg/chain/*/*/gen/_address
+
+# Temporary directory
+tmp/
