--- a/infrastructure/kube/keep-test/keep-client/keep-client-0.yaml
+++ b/infrastructure/kube/keep-test/keep-client/keep-client-0.yaml
@@ -44,8 +44,8 @@ spec:
               - key: account-0-keyfile
                 path: account-0-keyfile
       containers:
-        - name: keep-client-0
-          image: gcr.io/keep-test-f3e0/keep-client
+        - name: keep-client
+          image: gcr.io/keep-test-f3e0/keep-client:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 3919
@@ -55,50 +55,49 @@ spec:
                 secretKeyRef:
                   name: eth-account-passphrases
                   key: account-0
-            - name: LOG_LEVEL
-              value: debug
-            - name: IPFS_LOGGING_FMT
-              value: nocolor
+            # Read secret to env variable to use it as arg.
             - name: ETH_WS_URL
               valueFrom:
                 secretKeyRef:
                   name: eth-network-goerli
                   key: ws-url
+          envFrom:
+            - configMapRef:
+                name: keep-client-config
           volumeMounts:
             - name: keep-client-data
               mountPath: /mnt/keep-client/data
             - name: eth-account-keyfile
               mountPath: /mnt/keep-client/keyfile
-          command:
-            [
-              "keep-client",
+          command: ["keep-client", "start"]
+          args: [
               "--ethereum.url",
               "$(ETH_WS_URL)",
-              "--ethereum.key",
+              "--ethereum.keyFile",
               "/mnt/keep-client/keyfile/account-0-keyfile",
               "--storage.dataDir",
               "/mnt/keep-client/data",
               "--network.port",
               "3919",
               "--network.announcedAddresses",
-              "/dns4/bootstrap-0.test.keep.network/tcp/3919",
-              "--network.peers",
-              "/dns4/bootstrap-1.core.keep.test.boar.network/tcp/3001/ipfs/16Uiu2HAkuTUKNh6HkfvWBEkftZbqZHPHi3Kak5ZUygAxvsdQ2UgG",
+              "/dns4/keep-client-0.default.svc.cluster.local/tcp/3919",
+              # "--network.peers",
+              # "/dns4/bootstrap-1.core.keep.test.boar.network/tcp/3001/ipfs/16Uiu2HAkuTUKNh6HkfvWBEkftZbqZHPHi3Kak5ZUygAxvsdQ2UgG",
               "--metrics.port",
               "9601",
-              "start",
+              "--diagnostics.port",
+              "9701",
             ]
-
       initContainers:
-        - name: initcontainer-ecdsa-hardhat
-          image: gcr.io/keep-test-f3e0/ecdsa-hardhat
+        - name: initcontainer
+          image: gcr.io/keep-test-f3e0/keep-ecdsa-hardhat:latest
           imagePullPolicy: Always
           env:
             - name: CHAIN_API_URL
               valueFrom:
                 secretKeyRef:
                   name: eth-network-goerli
-                  key: rpc-url
+                  key: http-url
             - name: CONTRACT_OWNER_ETH_PRIVATE_KEY
               valueFrom:
                 secretKeyRef:
@@ -110,15 +109,17 @@ spec:
                   name: eth-account-privatekeys
                   key: account-0
             - name: ACCOUNTS_PRIVATE_KEYS
-              value: $(CONTRACT_OWNER_PRIVATE_KEY),$(KEEP_CLIENT_ETH_PRIVATE_KEY)
+              value: $(CONTRACT_OWNER_ETH_PRIVATE_KEY),$(KEEP_CLIENT_ETH_PRIVATE_KEY)
             - name: KEEP_CLIENT_ETH_ADDRESS
               valueFrom:
                 configMapKeyRef:
                   name: eth-account-info
                   key: account-0-address
-          command:
+          args:
             [
               "initialize",
+              "--network",
+              "goerli",
               "--owner",
               "$(KEEP_CLIENT_ETH_ADDRESS)",
               "--provider",
@@ -126,6 +127,7 @@ spec:
               "--operator",
               "$(KEEP_CLIENT_ETH_ADDRESS)",
             ]
+            # TODO: Ensure the KEEP_CLIENT_ETH_ADDRESS is funded with ether.
 ---
 apiVersion: v1
 kind: Service
@@ -145,6 +147,9 @@ spec:
     - port: 9601
       targetPort: 9601
       name: tcp-9601
+    - port: 9701
+      targetPort: 9701
+      name: tcp-9701
   selector:
     app: keep
     type: client
