--- a/.github/workflows/contracts-ecdsa.yml
+++ b/.github/workflows/contracts-ecdsa.yml
@@ -188,7 +188,7 @@ jobs:
           upstream-builds: ${{ github.event.inputs.upstream_builds }}
           query: |
             solidity-contracts-version = github.com/threshold-network/solidity-contracts#version
-            random-beacon-version = github.com/keep-network/keep-core/solidity/random-beacon#version
+            random-beacon-version = github.com/keep-network/keep-core/random-beacon#version
 
       - name: Resolve latest contracts
         run: |
@@ -228,7 +228,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
         with:
-          module: "github.com/keep-network/keep-core/solidity/ecdsa"
+          module: "github.com/keep-network/keep-core/ecdsa"
           url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           environment: ${{ github.event.inputs.environment }}
           upstream_builds: ${{ github.event.inputs.upstream_builds }}
@@ -257,6 +257,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: Artifacts for etherscan verifcation
+          path: ./solidity/ecdsa
 
       - uses: actions/setup-node@v2
         with:
