--- a/.github/workflows/contracts-random-beacon.yml
+++ b/.github/workflows/contracts-random-beacon.yml
@@ -159,6 +159,31 @@ jobs:
       - name: Deploy contracts
         run: yarn deploy:test
 
+      - name: Tar artifacts for docker container build
+        working-directory: ${{ github.workspace }}
+        run: |
+          tar -cvf random-beacon.tar \
+          --exclude='node_modules/' \
+          --exclude='.yarn/' \
+          ./solidity/random-beacon
+
+      - name: Upload artifacts for docker container build
+        uses: actions/upload-artifact@v3
+        with:
+          name: random-beacon-contracts-deployment-dry-run-artifacts
+          path: random-beacon.tar
+
+  docker-build-dry-run:
+    needs: contracts-deployment-dry-run
+    uses: ./.github/workflows/common-docker.yml
+    with:
+      download-artifact-name: random-beacon-contracts-deployment-dry-run-artifacts
+      download-artifact-path: random-beacon.tar
+      download-artifact-tar: true
+      image-name: keep-random-beacon-hardhat
+      image-push: false
+      image-context: ./solidity/random-beacon
+
   contracts-deployment-testnet:
     needs: [contracts-detect-changes, contracts-build-and-test]
     if: github.event_name == 'workflow_dispatch'
@@ -202,3 +227,31 @@ jobs:
         run: npm publish --access=public --tag ${{ github.event.inputs.environment }} --network=${{ github.event.inputs.environment }}
 
       # TODO: Notify CI about completion of the workflow
+
+      - name: Tar artifacts for docker container build
+        working-directory: ${{ github.workspace }}
+        run: |
+          tar -cvf random-beacon.tar \
+          --exclude='node_modules/' \
+          --exclude='.yarn/' \
+          ./solidity/random-beacon
+
+      - name: Upload content for docker container build
+        uses: actions/upload-artifact@v3
+        with:
+          name: random-beacon-contracts-deployment-testnet-artifacts
+          path: random-beacon.tar
+
+  docker-build-and-publish-testnet:
+    needs: [contracts-deployment-testnet]
+    uses: ./.github/workflows/common-docker.yml
+    with:
+      environment: ${{ github.event.inputs.environment }}
+      download-artifact-name: random-beacon-contracts-deployment-testnet-artifacts
+      download-artifact-path: random-beacon.tar
+      download-artifact-tar: true
+      image-name: keep-random-beacon-hardhat
+      image-push: true
+      image-context: ./solidity/random-beacon
+    secrets:
+      gcr-json-key: ${{ secrets.KEEP_TEST_GCR_JSON_KEY }}
