Use custom action to configure tenderly
Action can be reused by workflows to configure the tenderly token.

--- a/.github/workflows/contracts-random-beacon.yml
+++ b/.github/workflows/contracts-random-beacon.yml
@@ -196,8 +196,10 @@ jobs:
       - name: Configure tenderly
         env:
           TENDERLY_TOKEN: ${{ secrets.TENDERLY_TOKEN }}
-        run: ./config_tenderly.sh
-      
+        uses: ./.github/actions/docker-build-push
+        with:
+          token: ${{ secrets.TENDERLY_TOKEN }}
+
       - name: Deploy contracts
         env:
           CHAIN_API_URL: ${{ secrets.GOERLI_ETH_HOSTNAME_HTTP }}
