--- a/.github/workflows/contracts-random-beacon.yml
+++ b/.github/workflows/contracts-random-beacon.yml
@@ -373,6 +373,15 @@ jobs:
         # TODO: remove `--dry-run` before merge to main
         run: npm publish --access=public --tag dapp-development-${{ github.event.inputs.environment }} --network=${{ github.event.inputs.environment }} --dry-run
 
+      - name: Build and Publish Docker image
+        uses: ./.github/actions/docker-build-push
+        with:
+          environment: ${{ github.event.inputs.environment }}
+          imageName: keep-random-beacon-hardhat-dapp-dev
+          context: ./solidity/random-beacon
+          push: true
+          gcrJsonKey: ${{ secrets.KEEP_TEST_GCR_JSON_KEY }}
+
       - name: Notify CI about completion of the workflow
         uses: keep-network/ci/actions/notify-workflow-completed@v2
         env:
